@@ -1,3 +1,7 @@
+2005-03-09 Paul Stoffregen <paul AT pjrc.com>
+
+	* device/lib/printf_fast.c: fix leading zero format, eg "%02d"
+
 2005-05-09 Raphael Neider <rneider AT web.de>
 
 	* src/SDCCopt.c (killDeadCode): fixed bug #1156016
